RESOLVED FIXED72975
UString methods are not character size aware
https://bugs.webkit.org/show_bug.cgi?id=72975
Summary UString methods are not character size aware
Michael Saboff
Reported 2011-11-22 10:58:26 PST
Various UString methods do not take into account the character size of their arguments. Also the constructors that convert numbers to strings create 16 bit strings.
Attachments
Patch (4.67 KB, patch)
2011-11-22 11:07 PST, Michael Saboff
fpizlo: review+
Michael Saboff
Comment 1 2011-11-22 11:07:24 PST
Filip Pizlo
Comment 2 2011-11-24 11:10:15 PST
Comment on attachment 116252 [details] Patch What is the performance effect, if any?
Michael Saboff
Comment 3 2011-11-24 22:55:14 PST
(In reply to comment #2) > (From update of attachment 116252 [details]) > What is the performance effect, if any? This change appears neutral on SunSpider. Together with other changes it provides a benefit on SunSpider.
Michael Saboff
Comment 4 2011-11-24 22:55:52 PST
Note You need to log in before you can comment on or make changes to this bug.