UString methods are not character size aware https://bugs.webkit.org/show_bug.cgi?id=72975

Changed the UString number constructors to build 8 bit strings.
Modified the other methods to check string bitness and process
with 8 bits wherre appropriate.

* runtime/UString.cpp:
(JSC::UString::number):
(JSC::operator==):
(JSC::operator<):
(JSC::UString::ascii):


Canonical link: https://commits.webkit.org/89633@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101152 268f45cc-cd09-0410-ab3c-d52691b4dbfc